Modified so that a dataset made of zoomed nodules is created

--- a/notebook/make_label.ipynb
+++ b/notebook/make_label.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "1      False  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "1       True  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>Train</td>\n",
+       "      <td>Test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -505,7 +505,7 @@
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>Train</td>\n",
+       "      <td>Test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -519,7 +519,7 @@
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>Train</td>\n",
+       "      <td>Test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -533,7 +533,7 @@
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>Train</td>\n",
+       "      <td>Test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -547,7 +547,7 @@
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>Train</td>\n",
+       "      <td>Test</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -569,14 +569,14 @@
        "4  LIDC-IDRI-0001/0001_MA000_slice004           5      True     False   \n",
        "\n",
        "   is_nodule data_split  \n",
-       "0       True      Train  \n",
-       "1       True      Train  \n",
-       "2       True      Train  \n",
-       "3       True      Train  \n",
-       "4       True      Train  "
+       "0       True       Test  \n",
+       "1       True       Test  \n",
+       "2       True       Test  \n",
+       "3       True       Test  \n",
+       "4       True       Test  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>Train</td>\n",
+       "      <td>Validation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -651,7 +651,7 @@
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>Train</td>\n",
+       "      <td>Validation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -665,7 +665,7 @@
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>Train</td>\n",
+       "      <td>Validation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -679,7 +679,7 @@
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>Train</td>\n",
+       "      <td>Validation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -693,7 +693,7 @@
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>Train</td>\n",
+       "      <td>Validation</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -714,15 +714,15 @@
        "3  LIDC-IDRI-0028/0028_CM001_slice003           0     False      True   \n",
        "4  LIDC-IDRI-0028/0028_CM001_slice004           0     False      True   \n",
        "\n",
-       "   is_nodule data_split  \n",
-       "0      False      Train  \n",
-       "1      False      Train  \n",
-       "2      False      Train  \n",
-       "3      False      Train  \n",
-       "4      False      Train  "
+       "   is_nodule  data_split  \n",
+       "0      False  Validation  \n",
+       "1      False  Validation  \n",
+       "2      False  Validation  \n",
+       "3      False  Validation  \n",
+       "4      False  Validation  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,8 +746,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "meta.to_csv('/home/LUNG_DATA/meta_csv/meta.csv')\n",
-    "clean_meta.to_csv('/home/LUNG_DATA/meta_csv/clean_meta.csv')"
+    "meta.to_csv('../meta.csv')\n",
+    "clean_meta.to_csv('../clean_meta.csv')"
    ]
   },
   {
@@ -774,7 +774,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
